# dgl-ascend

./: CMakeLists.txt  build.sh  test.sh
examples/pytorch/lightgcn/: README.md  config.py  dataset.py  load_yelp2018.sh  main.py  model.py  parser.py  procedure.py  train.py  utils.py
include/dgl/aten/: macro.h
include/dgl/runtime/: c_runtime_api.h  ndarray.h
operators/spmm_sum_operator/: CMakeLists.txt  README.md  data_utils.h  main.cpp  pybind11.cpp  run.sh  spmm_sum.cpp  spmm_sum_tiling.h  test.sh
operators/spmm_sum_operator/cceprint/: spmm_sum_custom_0_0_vec.cce  spmm_sum_custom_1_0_vec.cce  spmm_sum_custom_2_0_vec.cce  spmm_sum_custom_3_0_vec.cce  spmm_sum_custom_4_0_vec.cce  spmm_sum_custom_5_0_vec.cce  spmm_sum_custom_6_0_vec.cce  spmm_sum_custom_7_0_vec.cce
operators/spmm_sum_operator/scripts/: gen_data.py  verify_result.py
operators/spmm_sum_operator/spmm_sum_benchmark/: compare_cpu_npu.py  dgl_benchmark_cpu.py  dgl_benchmark_npu.py  utils.py
operators/spmm_sum_operator/spmm_sum_benchmark/results/: cpu_row1358_contrib_Cora.txt  cpu_row1358_contrib_PubMed.txt  dgl_benchmark_npu_results.csv
python/dgl/: _sparse_ops.py
python/dgl/_ffi/: runtime_ctypes.py
python/dgl/backend/pytorch/: tensor.py
script/: build_dgl_ascend.sh
src/array/: kernel.cc
src/array/ascend/: spmm.cc  spmm_sum_kernel.cpp
src/array/npu/: array_cumsum.cc  array_index_select.cc  array_nonzero.cc  array_op_impl.cc  array_scatter.cc  array_sort.cc  csr_get_data.cc  csr_mm.cc  csr_sum.cc  disjoint_union.cc  gather_mm.cc  labor_sampling.cc  rowwise_sampling.cc  sddmm.cc  segment_reduce.cc  spmat_op_impl_coo.cc  spmat_op_impl_csr.cc  spmm.cc
src/geometry/npu/: geometry_op_impl.cc
src/graph/sampling/randomwalks/: get_node_types_npu.cc  randomwalk_npu.cc  randomwalk_with_restart_npu.cc
src/graph/transform/npu/: compact.cc  knn.cc  to_block.cc
src/runtime/: c_runtime_api.cc
src/runtime/ascend/: ascend_device_api.cc
tests/ascend/: test_spmm_correctness.py  test_spmm_npu.py
tests/python/: test_ascend_device.py  test_dispatch.py
